# Multiforge

./: .gitmodules  README.md  docker-compose.override.yml  docker-compose.yml
backend/: pyproject.toml  run_js.sh
backend/app/: dependencies.py  main.py  settings.py  util_classes.py
backend/app/api/: tools.py
backend/app/api/routers/: config.py  db.py  forges.py  graphs.py  metagraphs.py  tools.py
backend/app/core/: toolrunsocket.py  websockerconnectionmanager.py
backend/app/models/: asset.py  config.py  forge.py  forgegraph.py  forgetool.py  metagraph.py
backend/app/scripts/: initdb.py
docker/fastapi/: Dockerfile
docker/nginx/: Dockerfile
frontend/: .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  App.vue.ts  main.ts
frontend/src/.d/: liteGraphUtils.d.ts
frontend/src/assets/: global.css
frontend/src/components/: ForgeList.vue  LiteGraph.vue  LiteGraphSerialiser.vue  ToolList.vue
frontend/src/router/: index.ts
frontend/src/types/: ExecSocket.ts  Forge.ts  ForgeStatus.ts  ForgeTool.ts  JSONResponse.ts  MetaGraph.ts  OrderTools.ts
frontend/src/utils/: GraphNode.ts  execNode.ts  getForge.ts  getProject.ts  getTool.ts  liteGraphUtils.js  multiForgeTools.ts  runGraph.ts
frontend/src/views/: ForgeView.vue  HomeView.vue  ModelView.vue  ToolsView.vue  WorkflowView.vue
