[tool.poetry]
name = "Multiforge fastapi environment"
version = "0.1.0"
description = ""
authors = ["Brad Power <brad.power@gmail.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
pymongo = "^4.1.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
openpyxl = "^3.0.9"
pyshp = "^2.2.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
